--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -9,20 +9,43 @@ project:
   java:
     groupId: com.acme
     version: 8
+  extraProperties:
+    inceptionYear: 2021
 
 release:
   github:
-    owner: aalmiray
     overwrite: true
     sign: true
+    discussionCategoryName: Announcements
+    changelog:
+      formatted: ALWAYS
+      format: '- {{commitShortHash}} {{commitTitle}}'
+      contributors:
+        format: '{{contributorName}}{{#contributorUsernameAsLink}} ({{.}}){{/contributorUsernameAsLink}}'
+      labelers:
+        - label: 'issue'
+          title: 'Add'
+        - label: 'task'
+          title: 'Setup'
+      categories:
+        - title: '✅ Issues'
+          labels:
+            - 'issue'
+        - title: '🧰 Tasks'
+          labels:
+            - 'task'
+      replacers:
+        - search: '\[chore\] '
+        - search: '\[announce\]'
+          replace: '📣'
 
 signing:
-  enabled: true
+  active: always
   armored: true
 
 packagers:
   brew:
-    enabled: true
+    active: always
 
 distributions:
   app:
