build: Update release workflow

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -2,9 +2,9 @@ project:
   name: app
   description: Sample application
   longDescription: Sample application
-  website: https://acme.com/wesome-app
+  website: https://acme.com/awesome-app
   authors:
-    - Andres Almiray
+    - Ixchel Ruiz
   license: Apache-2.0
   java:
     groupId: com.acme
@@ -15,7 +15,6 @@ project:
 release:
   github:
     overwrite: true
-    sign: true
     discussionCategoryName: Announcements
     changelog:
       formatted: ALWAYS
@@ -44,16 +43,22 @@ release:
         - search: 'fix: '
         - search: 'chore: '
 
-signing:
-  active: always
-  armored: true
-
 packagers:
   brew:
     active: always
+    tap:
+      username: '1284934+ixchelruiz@users.noreply.github.com'
 
 distributions:
   app:
     artifacts:
       - path: target/distributions/{{distributionName}}/{{distributionName}}-{{projectVersion}}.zip
       - path: target/distributions/{{distributionName}}/{{distributionName}}-{{projectVersion}}.tar.gz
+
+upload:
+  artifactory:
+    ixchelruiz:
+      active: always
+      host: 'https://ixchelr.jfrog.io/artifactory'
+      repositories:
+        - path: 'binaries/{{projectName}}/{{projectVersion}}/{{artifactFile}}'
